# Minesweeper-Bot

./: .gitignore  CMakeLists.txt  README.md
src/: CLog.cpp  CLog.h  CMainWindow.cpp  CMainWindow.h  Log.cpp  Log.hpp  LogViewController.cpp  LogViewController.hpp  MainWindow.cpp  MainWindow.hpp  MineSweeperBot.cpp  MineSweeperBot.h  MineSweeperBot.hpp  MineSweeperInterface.cpp  MineSweeperInterface.h  MineSweeperInterface.hpp  MineSweeperXPInterface.cpp  MineSweeperXPInterface.hpp  buttons.cpp  buttons.h  globals.h  main.cpp  resource.h
src/_legacy/: Log.cpp  Log.hpp  MineSweeperBot.cpp  MineSweeperInterface.cpp  MineSweeperXPInterface.hpp  buttons.cpp
src/minesweeper_interfaces/: MemoryMineSweeper.cpp  MemoryMineSweeper.hpp  MineSweeperXPInterface.cpp
src/model/: BoardState.cpp  BoardState.hpp  BoxState.hpp  GameMove.hpp  MineSweeperBot.cpp  MineSweeperBot.hpp  MineSweeperInterface.hpp  MoveComputer.cpp  MoveComputer.hpp  MovesLogger.hpp  PlayingState.hpp
src/view/: LogViewController.cpp  LogViewController.hpp  MainWindow.cpp  MainWindow.hpp  MainWindowLogger.cpp  MainWindowLogger.hpp
src_tests/: 3x3tests.cpp  BoardBuilder.hpp
